--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-base=https://techhk.aoscdn.com
-api=wxygpcf88b32jdqu2
+REACT_APP_BASE_KEY=https://techhk.aoscdn.com
+REACT_APP_API_KEY=wxygpcf88b32jdqu2
